<resources>
    <string name="app_name">GkRozgar</string>
    <string name="title_activity_dash_board">dashBoard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_withdraws">Withdraws</string>
    <string name="menu_requested_withdraws">Requested Withdraws</string>
    <string name="menu_packages">Packages</string>
    <string name="menu_referals_history">Referals History</string>

    <string name="already_account"><u>I have already Account</u></string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="i_have_an_account"><u>I have no Account</u></string>

    <string name="msg_verify_your_account">Click here to verify your account</string>
    <string name="basic_account">Basic Account</string>
    <string name="go_to_premium">GO TO PREMIUM</string>
    <string name="personal_info">PERSONAL INFO</string>
    <string name="email">Email</string>
    <string name="your_invitation_code">Your Invitation Code</string>
    <string name="invited_from">Invited From</string>
    <string name="coin_balance">Coin balance</string>
    <string name="earn_coins">Earn Coins</string>
    <string name="cash_balance">Cash Balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdrawals_history">Withdrawals history</string>
</resources>