<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gredients"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:elevation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/five_dp"
                android:text="Quizz"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/fab_margin"
                android:src="@drawable/img_profile_demo"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="@dimen/five_dp"
                app:civ_circle_background_color="@color/color1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/ten_dp">

                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_vertical"
                    android:text="Chirag Prajapati"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_toRightOf="@id/tv_user_name"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/ten_dp"
                    android:src="@drawable/ic_edit_white_24dp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/tv_account_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:drawableLeft="@drawable/ic_account_verified_white_20dp"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_vertical"
                android:padding="@dimen/ten_dp"
                android:paddingLeft="@dimen/five_dp"
                android:text="Verified"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_verify_your_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/ten_dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:padding="@dimen/ten_dp"
                android:paddingLeft="@dimen/five_dp"
                android:text="@string/msg_verify_your_account"
                android:textAllCaps="true"
                android:textColor="@color/colorYellowDark"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_primary_transparent_squer"
                android:padding="@dimen/ten_dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_coin_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@drawable/ic_account_circle_white_20dp"
                    android:drawablePadding="@dimen/five_dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/five_dp"
                    android:text="@string/basic_account"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_goto_premium"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="@dimen/ten_five_dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/ten_dp"
                        android:paddingRight="@dimen/ten_dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_white_24dp"
                            android:drawablePadding="@dimen/five_dp"
                            android:drawableTint="@color/colorYellowDark"
                            android:gravity="center"
                            android:padding="@dimen/five_dp"
                            android:text="@string/go_to_premium"
                            android:textAllCaps="true"
                            android:textColor="@color/colorYellowDark"
                            android:textSize="12sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:cardCornerRadius="@dimen/fab_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/ten_five_dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingBottom="@dimen/ten_dp"
                        android:text="@string/personal_info"
                        android:textColor="@color/color1" />

                    <View
                        android:layout_width="35dp"
                        android:layout_height="10px"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:background="@drawable/bg_gredients" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/five_dp"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_email_color1_18dp"
                            android:drawablePadding="@dimen/five_dp"
                            android:gravity="center_vertical"
                            android:text="@string/email"
                            android:textColor="@color/color1"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/ten_dp"
                            android:paddingBottom="@dimen/ten_dp"
                            android:text="your@email.com"
                            android:textColor="@color/color1"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/five_dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:background="@drawable/bg_gredients" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person_plus_color1_16dp"
                            android:drawablePadding="@dimen/five_dp"
                            android:gravity="center_vertical"
                            android:text="@string/your_invitation_code"
                            android:textColor="@color/color1"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/ten_dp"
                            android:paddingBottom="@dimen/ten_dp"
                            android:text="AG39G3"
                            android:textColor="@color/color1"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1px"
                        android:layout_marginTop="@dimen/five_dp"
                        android:layout_marginBottom="@dimen/five_dp"
                        android:background="@drawable/bg_gredients" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_person_plus_color1_16dp"
                            android:drawablePadding="@dimen/five_dp"
                            android:gravity="center_vertical"
                            android:text="@string/invited_from"
                            android:textColor="@color/color1"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingTop="@dimen/ten_dp"
                            android:paddingBottom="@dimen/ten_dp"
                            android:text="Dhaval Prajapati"
                            android:textColor="@color/color1"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
