<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gredients"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/five_dp"
            android:text="Quizz"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--app:layout_scrollFlags="scroll|exitUntilCollapsed"-->

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardview_root"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginTop="@dimen/fab_margin"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginBottom="@dimen/fab_margin"
                    app:cardCornerRadius="@dimen/fab_margin"
                    app:cardElevation="@dimen/five_dp"
                    app:layout_collapseMode="parallax">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:orientation="horizontal"
                            android:visibility="visible">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/ten_dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/five_dp"
                                    android:text="@string/coin_balance"
                                    android:textColor="@color/color1" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/bg_primary_transparent_rectangle"
                                    android:padding="@dimen/ten_dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="start"
                                        android:layout_centerVertical="true"
                                        android:text="10000"
                                        android:textColor="@color/colorYellowDark"
                                        android:textSize="25sp" />

                                    <de.hdodenhof.circleimageview.CircleImageView
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:layout_centerVertical="true"
                                        android:layout_alignParentRight="true"
                                        android:background="@drawable/bg_yellow_circle"
                                        android:src="@drawable/ic_star_white_24dp" />

                                </RelativeLayout>


                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:drawableRight="@drawable/ic_dollar_black_18dp"
                                    android:drawableTint="@color/color1"
                                    android:paddingTop="@dimen/five_dp"
                                    android:text="1000 coins  =  1"
                                    android:textColor="@color/color1"
                                    android:textSize="12sp" />

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <Button
                                        android:id="@+id/btn_earn_coins"
                                        android:layout_width="match_parent"
                                        android:layout_height="@dimen/button_height"
                                        android:layout_alignParentBottom="true"
                                        android:layout_gravity="center"
                                        android:layout_margin="@dimen/ten_dp"
                                        android:background="@drawable/bg_btn"
                                        android:text="@string/earn_coins"
                                        android:textColor="@color/colorWhite"
                                        android:textSize="12sp" />
                                </RelativeLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:background="@drawable/bg_gredient_round_corners"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/ten_dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/five_dp"
                                    android:text="@string/cash_balance"
                                    android:textColor="@android:color/white" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/bg_primary_transparent_rectangle"
                                    android:drawableRight="@drawable/ic_dollar_black_24dp"
                                    android:drawablePadding="@dimen/five_dp"
                                    android:drawableTint="@android:color/white"
                                    android:padding="@dimen/five_dp"
                                    android:text="10"
                                    android:textColor="@android:color/white"
                                    android:textSize="30sp" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center_vertical"
                                    android:paddingTop="@dimen/ten_dp">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:drawableRight="@drawable/ic_dollar_black_18dp"
                                        android:drawableTint="@android:color/white"
                                        android:text="Min. withdrawal is 10"
                                        android:textColor="@android:color/white"
                                        android:textSize="12sp" />

                                </LinearLayout>

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <androidx.cardview.widget.CardView
                                        android:id="@+id/btn_withdraw"
                                        android:layout_width="match_parent"
                                        android:layout_height="35dp"
                                        android:layout_alignParentBottom="true"
                                        android:layout_margin="@dimen/ten_dp"
                                        android:clickable="true"
                                        android:focusable="true"
                                        android:foreground="?android:attr/selectableItemBackground"
                                        app:cardCornerRadius="@dimen/fab_margin">

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_gravity="center_vertical"
                                            android:gravity="center"
                                            android:orientation="horizontal"
                                            android:paddingLeft="@dimen/ten_five_dp"
                                            android:paddingRight="@dimen/ten_five_dp">

                                            <de.hdodenhof.circleimageview.CircleImageView
                                                android:layout_width="20dp"
                                                android:layout_height="20dp"
                                                android:src="@drawable/img_withdraw_72px" />

                                            <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:gravity="center"
                                                android:padding="@dimen/five_dp"
                                                android:text="@string/withdraw"
                                                android:textAllCaps="true"
                                                android:textColor="@color/color1"
                                                android:textSize="12sp" />

                                        </LinearLayout>
                                    </androidx.cardview.widget.CardView>
                                </RelativeLayout>
                            </LinearLayout>

                        </LinearLayout>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/five_dp"
                android:padding="@dimen/five_dp"
                android:text="@string/withdrawals_history"
                android:textColor="@android:color/white"
                app:layout_scrollFlags="snap" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>